erDiagram
    %% SCHEMA DE CONFIG

    CATEGORY {
        int category_id PK
        varchar name UK
        timestamp created_at
    }

    UNIT {
        int unit_id PK
        varchar name UK
        timestamp created_at
    }
    
    ZONE {
        int zone_id PK
        varchar name UK
        timestamp created_at
    }

    TABLE {
        int table_id PK
        int zone_id FK
        varchar table_number UK
        timestamp created_at
    }
    
    %% SCHEMA DE INVENTORY
    INGREDIENT {
        int ingredient_id PK
        int category_id FK
        int unit_id FK
        varchar name UK       
        decimal unit_price "≥ 0.01"
        decimal current_stock "≥ 0.01"
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }
    
    RECIPE {
        int recipe_id PK
        varchar name UK
        decimal base_price "≥ 0.01"
        boolean is_available
        int preparation_time
        timestamp created_at
        timestamp updated_at
    }
    
    RECIPE_ITEM {
        int recipe_item_id PK
        int recipe_id FK
        int ingredient_id FK
        decimal quantity "≥ 0.01"
        timestamp created_at
    }
    
    %% SCHEMA DE OPERATION

    ORDER {
        int order_id PK
        int table_id FK
        enum status "CREATED, READY, SERVED, PAID, CANCELLED."
        decimal total_amount "≥ 0.01"
        timestamp created_at
        timestamp ready_at
        timestamp served_at
        timestamp paid_at
        timestamp cancelled_at
    }
    
    ORDER_ITEM {
        int order_item_id PK
        int order_id FK
        int recipe_id FK
        decimal unit_price "≥ 0.01"
        decimal total_price "≥ 0.01"
        enum status "CREATED, PREPARING, READY, SERVED, CANCELLED."
        text notes
        timestamp created_at
        timestamp preparing_at
        timestamp ready_at
        timestamp served_at
        timestamp cancelled_at
    }
    
    ORDER_ITEM_INGREDIENT {
        int order_item_ingredient_id PK
        int order_item_id FK
        int ingredient_id FK
        decimal quantity "≥ 0.01"
        decimal unit_price "≥ 0.01"
        decimal total_price "≥ 0.01"
        timestamp created_at
    }
    
    PAYMENT {
        int payment_id PK
        int order_id FK
        enum payment_method "CASH, CARD"
        decimal tax_amount "≥ 0.01"
        decimal amount "≥ 0.01"
        text notes
        timestamp created_at
    }
    
    %% RELACIONES
    CATEGORY   ||--o{ INGREDIENT              : "has"
    UNIT       ||--o{ INGREDIENT              : "measured_in"
    ZONE ||--o{ TABLE : "contains"
    
    RECIPE    ||--o{ RECIPE_ITEM      : "composed_of"
    INGREDIENT ||--o{ RECIPE_ITEM      : "used_in"
    
    RECIPE ||--o{ ORDER_ITEM : "ordered_as"
    
    TABLE ||--o{ ORDER : "serves"
    
    ORDER ||--o{ ORDER_ITEM : "contains"
    ORDER ||--|| PAYMENT : "paid_with"
    
    ORDER_ITEM ||--o{ ORDER_ITEM_INGREDIENT : "customized_with"
    INGREDIENT ||--o{ ORDER_ITEM_INGREDIENT : "used_in_customization"